# ckern

./: .gitignore  .plzconfig  .plzconfig.local.example  BUILD  CMakeLists.txt
boot/grub/: grub.cfg
build_defs/: BUILD  multiboot.build_defs  zig.build_defs
include/kernel/: BUILD  kernel.h  malloc.h
include/libc/: BUILD  inttypes.h
include/libc/pdclib/: BUILD
include/std/: BUILD  string.h  writer.h
plugins/: BUILD
src/: BUILD  linker.ld  main.zig
src/arch/x86/: idt.zig  index.zig
src/asm/: BUILD  asm.c  asm.h
src/drivers/: index.zig  pci.zig  qemu.zig
src/files/: BUILD  files.c  files.h  files_test.c
src/kernel/: BUILD  index.zig  kernel.c  kernel.cpp  malloc.c  malloc.cpp  memory.c  serial.zig
src/libc/_PDCLIB/: BUILD  _PDCLIB_filemode.c
src/libc/_dlmalloc/: BUILD  malloc.c
src/libc/_dtoa/: dtoa.c
src/libc/ctype/: BUILD
src/libc/inttypes/: BUILD
src/libc/locale/: BUILD
src/libc/platform/functions/_PDCLIB/: BUILD  _PDCLIB_Exit.c  _PDCLIB_close.c  (+7 more)
src/libc/platform/include/: BUILD
src/libc/stdio/: BUILD  remove.c
src/libc/stdlib/: BUILD
src/libc/string/: BUILD
src/libc/time/: BUILD
src/main/: BUILD  boot.s  idt.zig  linker.ld  main.c  main.cpp  main.zig  pci.zig  root.zig  serial.zig  terminal.zig
src/qemu/: BUILD  qemu.c  qemu.h
src/serial/: BUILD  serial.c  serial.h  serial_test.c
src/std/: BUILD  string.cpp
src/terminal/: BUILD  memory.c  terminal.h  vga_text_mode_term.c
zig/: BUILD  ahci.zig  asm.zig  lib.zig  libc.zig  mem.zig  pci.zig  qemu.zig  root.zig  serial.zig  terminal.zig
zig/std/: mystd.zig
(+5 files in other folders)
